<resources>
    <string name="app_name">Step To Food</string>
    <string name="todo">TODO</string>
    <string name="step_to">STEP TO</string>
    <string name="food">FOOD</string>

    <string name="permissions_request_text">Приложению требуется доступ к вашим файлам</string>

    <string name="auth">Авторизация</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="registr_button_text">Зарегистрироваться</string>
    <string name="error_registration">Данный логин уже используется</string>
    <string name="error_login">Логин или пароль введены неверно</string>
    <string name="error_text_input">Недопустимое значение</string>
    <string name="error_required_again_login">Требуется повторно выполнить вход</string>
    <string name="error_no_internet">Отсутствует соединение с интернетом</string>

    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_login">transition:LOGIN</string>
    <string name="transition_name_pass">transition:PASS</string>

    <string name="tabRecipesText">Рецепты</string>
    <string name="tabComposeText">Составить</string>
    <string name="tabUserText">Пользователь</string>

    <string name="products_label">ПРОДУКТЫ</string>
    <string name="how_do_label">КАК ПРИГОТОВИТЬ</string>
    <string name="energy_label">ПИЩЕВАЯ ЦЕННОСТЬ (100 г.)</string>
    <string name="calorie_label">Каллорий</string>
    <string name="fat_label">Жиры</string>
    <string name="protein_label">Белки</string>
    <string name="carbohydrates_label">Углеводы</string>
    <string name="add_products">Добавьте продукты…</string>
    <string name="add_description">Добавьте описание…</string>
    <string name="gram">г.</string>
    <string name="add_recipe_success">Рецепт успешно добавлен</string>

    <string name="select_products">ВЫБЕРИТЕ ПРОДУКТЫ</string>

    <string name="done_label">ГОТОВО</string>
    <string name="cancel_label">ОТМЕНА</string>
    <string name="input_recipe_name">ВВЕДИТЕ НАЗВАНИЕ</string>
    <string name="select_recipe_image">ВЫБЕРИТЕ ФОТО</string>
    <string name="select_product">ВЫБЕРИТЕ ПРОДУКТ</string>

    <string name="search_recipe">Поиск рецептов</string>

    <string name="added_recipes_tittle">ДОБАВЛЕННЫЕ РЕЦЕПТЫ</string>
    <string name="like_recipes_tittle">ПОНРАВИВШИЕСЯ РЕЦЕПТЫ</string>
    <string name="composed_recipes_tittle">НАЙДЕННЫН РЕЦЕПТЫ</string>
    <string name="search_recipes">ПОИСК РЕЦЕПТОВ</string>

    <string name="add_recipes_menu_item">Добавить новый рецепт</string>
    <string name="added_recipes_menu_item">Добавленные рецепты</string>
    <string name="like_recipes_menu_item">Понравившиеся рецепты</string>
    <string name="exit_menu_item">Выйти</string>

    <string name="dialog_tittle">Выход</string>
    <string name="dialog_message">Вы уверены, что хотите выйти?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="calories_label">Каллорийность:</string>
</resources>
