<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:text="@string/energy_label"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/calorie_label"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/calorieTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/protein_label"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/proteinTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/fat_label"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/fatTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/carbohydrates_label"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/carbohydratesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>